# Terminal-Dashboard

./: .gitignore  README.md  start-browser.bat
backend/: check_data.py  check_db.py  check_db2.py  check_filings.py  check_filings2.py  check_news_schema.py  main.py  requirements.txt
backend/agents/: anomaly_detector.py  earnings_predictor.py  filings_agent.py  filings_summarizer.py  finbert_scorer.py  guardian_agent.py  hedge_fund_team.py  macro_agent.py  news_agent.py  sentiment_agent.py  technicals_agent.py
backend/ai/: __init__.py  terminal_copilot.py
backend/data/: company_data.py  crypto_ws.py  delta_data.py  duckdb_store.py  fundamentals.py  fyers_data.py  global_data.py  insider_data.py  nse_data.py  options_data.py  prediction_markets.py  stock_universe.py  supply_chain.py  web_research.py
backend/data_store/: fyers_symbols.json
backend/db/: database.py  models.py
backend/quant/: __init__.py  backtester.py  options_pricer.py
engine/: CMakeLists.txt  build.bat
engine/src/: bindings.cpp  tick_processor.hpp
frontend/: index.html  package-lock.json  package.json  start-electron.bat  tsconfig.electron.json  tsconfig.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/public/: index.html
frontend/scripts/: deploy-mfe.mjs  set-gpu-pref.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AICopilot.tsx  AnalystEstimatesPanel.tsx  AnomalyPanel.tsx  BacktestPanel.tsx  BetaAnalysisPanel.tsx  BlockBulkDealsPanel.tsx  Chart.tsx  CommandBar.tsx  CompanyOverview.tsx  ConcallPanel.tsx  CorporateActionsPanel.tsx  CryptoDashboard.tsx  DCFValuationPanel.tsx  DeliveryVolumePanel.tsx  ESGPanel.tsx  EarningsAIPanel.tsx  EarningsCalendar.tsx  EarningsEstimatorPanel.tsx  EconomicCalendar.tsx  FIIDIIPanel.tsx  FXMatrix.tsx  FilingsPanel.tsx  Fundamentals.tsx  GlobalMarketsPanel.tsx  GuardianStatus.tsx  HedgeFundPanel.tsx  IVSurface.tsx  InsiderActivity.tsx  MFEMount.tsx  MacroPanel.tsx  MarketBreadthPanel.tsx  MnATrackerPanel.tsx  MnemonicCLI.tsx  NewsPanel.tsx  OptionsChain.tsx  PeerComparisonPanel.tsx  Portfolio.tsx  PriceAlerts.tsx  RateHikeProbabilityPanel.tsx  Screener.tsx  (+17 more)
frontend/src/context/: TitleBarContext.ts
frontend/src/hooks/: useApi.ts  useMarketWorker.ts  useWebSocket.ts
frontend/src/mfe/: bus.ts  index.ts  loader.ts  registry.ts  types.ts
frontend/src/store/: liveDataStore.ts  marketStore.ts
frontend/src/types/: electron.d.ts  index.ts
frontend/src/workers/: marketWorker.ts  wsMultiplexer.ts
launcher/: BTI.spec  bti_launcher.py  create_icon.py
mfe-des/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mfe-des/src/: DES.tsx  main.tsx
mfe-des/src/shim/: bus-shim.ts
mfe-gp/: index.html  package-lock.json  package.json  vite.config.ts
mfe-gp/src/: GP.tsx  main.tsx
scripts/: guardian.py  setup.ps1  start.ps1
